[gd_scene load_steps=8 format=3 uid="uid://vfew7l2hp267"]

[ext_resource type="Script" path="res://scenes/ui/stat_bar.gd" id="1_7v0ek"]
[ext_resource type="Texture2D" uid="uid://bcjys4tn3aflh" path="res://assets/hp_icon.png" id="1_pti21"]
[ext_resource type="Texture2D" uid="uid://deg7r3nv7hlbf" path="res://assets/shield_icon.png" id="2_gkbx0"]
[ext_resource type="Texture2D" uid="uid://bukh1qtvveyjs" path="res://assets/drowsy.png" id="4_hqlxx"]
[ext_resource type="Texture2D" uid="uid://bnvbd0qx6taut" path="res://assets/asleep.png" id="5_6py2c"]
[ext_resource type="Texture2D" uid="uid://dhyiw33lqum8t" path="res://assets/dagger_icon.png" id="6_kxhl8"]

[sub_resource type="LabelSettings" id="LabelSettings_niug2"]
font_size = 80

[node name="StatBar" type="GridContainer"]
custom_minimum_size = Vector2(20, 5)
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -202.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource("1_7v0ek")

[node name="HealthStat" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="HealthIcon" type="TextureRect" parent="HealthStat"]
layout_mode = 2
texture = ExtResource("1_pti21")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="HealthStat"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="HealthLabel" type="Label" parent="HealthStat/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 74.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "10"
label_settings = SubResource("LabelSettings_niug2")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="BlockStat" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BlockIcon" type="TextureRect" parent="BlockStat"]
layout_mode = 2
texture = ExtResource("2_gkbx0")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="BlockStat"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="BlockLabel" type="Label" parent="BlockStat/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 74.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "5"
label_settings = SubResource("LabelSettings_niug2")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DrowsyStat" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="DrowsyIcon" type="TextureRect" parent="DrowsyStat"]
layout_mode = 2
texture = ExtResource("4_hqlxx")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="DrowsyStat"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="DrowsyLabel" type="Label" parent="DrowsyStat/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 74.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "10"
label_settings = SubResource("LabelSettings_niug2")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="AsleepStat" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="AsleepIcon" type="TextureRect" parent="AsleepStat"]
layout_mode = 2
texture = ExtResource("5_6py2c")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="AsleepStat"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="AsleepLabel" type="Label" parent="AsleepStat/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 74.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "10"
label_settings = SubResource("LabelSettings_niug2")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="StrengthStat" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="StrengthIcon" type="TextureRect" parent="StrengthStat"]
layout_mode = 2
texture = ExtResource("6_kxhl8")
expand_mode = 3
stretch_mode = 5

[node name="Control" type="Control" parent="StrengthStat"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="StrengthLabel" type="Label" parent="StrengthStat/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 74.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "10"
label_settings = SubResource("LabelSettings_niug2")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2
